# eris

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: linux.yml  mac.yml  quality.yml  release.yml  translations.yml  windows.yml
i18n/en/: eris.ftl
resources/: languageCodes.json
resources/css/: app.css
resources/ui/: file_new_dialog.ui  main_window.ui  new_dialog.ui  novel_dialog.ui  settings_dialog.ui
src/: build.rs  main.rs
src/actions/: global.rs  mod.rs
src/app/: database.rs  error.rs  history.rs  localize.rs  mod.rs  novel.rs  window_state.rs
src/app/settings/: general.rs  list.rs  mod.rs  novel_recognition.rs
src/appop/: history.rs  messages.rs  mod.rs  novel.rs  novel_recognition.rs  settings.rs  update.rs
src/appop/parsers/: export_import_json.rs  mod.rs  novelupdates.rs  royalroad.rs  scribblehub.rs  webnovel.rs
src/ui/: about_dialog.rs  exporter.rs  file_new_dialog.rs  filter.rs  history.rs  mod.rs  new_dialog.rs  notifcation_dialog.rs  novel_dialog.rs  novel_list.rs  reading_now.rs  settings_dialog.rs
src/utils/: gtk.rs  mod.rs
